Finished implementation of the concurrent and serial versions

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
 all: main
 
 main: main.c compute_pi.c
-	gcc -o bin/main main.c compute_pi.c -pthread
+	gcc -o bin/main main.c compute_pi.c -pthread -lm
